# livekit-local

./: .gitignore  README.md  cursorignore  save-api-stub.py  save_api_stub.py
agent/: .env.example  README.md  agent.py  pyproject.toml
client/: app.js  index.html  styles.css
livekit-server/: .env.example  pyproject.toml
livekit-server/server/: __init__.py  main.py
node-server/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
node-server/src/: application.proto  server.ts
server/: server.py
