[project]
name = "livekit-collect-agent"
version = "0.1.0"
description = "LiveKit voice agent that collects name, age, place and POSTs to API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[google,deepgram,silero,turn-detector]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "aiohttp",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
